--- a/frontend/index.html
+++ b/frontend/index.html
@@ -3,9 +3,20 @@
 <head>
 	<meta charset="UTF-8">
 	<title>New York Times Search</title>
-	
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
 </head>
+
+
 <body>
-	
+	<div class="jumbotron">
+		<h1>New York Times Search</h1>
+	</div>
+
+	<form>
+		
+		<label><input type="text" id="user search" name="star"></label>
+
+	</form>
 </body>
 </html>
