--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,11 +1,21 @@
-<<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
 	<title>New York Times Search</title>
-	
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+
 </head>
 <body>
+<div class="jumbotron">
+  <div class="container">
+    <h1>New York Times Search</h1>
+  </div>
+</div>
+
+<script type="text/javascript" src="../back-end/logic.js"></script>
 	
 </body>
 </html>
