--- a/frontend/index.html
+++ b/frontend/index.html
@@ -9,11 +9,30 @@
 
 </head>
 <body>
-<div class="jumbotron">
-  <div class="container">
+<div class="container">
+  <div class="jumbotron">
     <h1>New York Times Search</h1>
   </div>
-</div>
+  <div class="row">
+  <div class= "col-lg-12">
+  <div class ="panel panel-default">
+    <div class ="panel-heading">
+    <h3 class= "panel-title">Search Parameters</h3>
+  </div>
+  <div class="panel-body">
+    xxxxx
+  </div>
+  </div>
+  </div>
+  <div class = "col-lg-12">
+  <div class ="panel panel-default">
+    <div class ="panel-heading">
+    <h3 class= "panel-title">Search Results</h3>
+  </div>
+  <div class="panel-body">
+    xxxxx
+  </div>
+  </div>
 
 <script type="text/javascript" src="../back-end/logic.js"></script>
 	
