--- a/frontend/index.html
+++ b/frontend/index.html
@@ -5,6 +5,7 @@
 	<title>New York Times Search</title>
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+
 </head>
 
 
@@ -12,11 +13,15 @@
 	<div class="jumbotron">
 		<h1>New York Times Search</h1>
 	</div>
-
+	<div class="panel panel-default">
+		<div class="panel-heading"
+	</div>
 	<form>
 		
 		<label><input type="text" id="user search" name="star"></label>
 
 	</form>
+
+	<button type="button" id="brown"></button>
 </body>
 </html>
